# Two-Phase-Cold-Plate-Research

./: .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  pyproject.toml
docs/: phase2_validation_plan.md
scripts/: debug_correlation_tests.py  generate_boiling_curve.py
src/two_phase_cp/: __init__.py
src/two_phase_cp/analytical/: __init__.py  _types.py  model.py
src/two_phase_cp/correlations/: __init__.py  _envelope.py  boiling.py  chf.py  onb.py  single_phase.py
src/two_phase_cp/properties/: __init__.py  water.py
tests/: conftest.py  test_analytical.py  test_correlations.py  test_envelope.py  test_properties.py
wiki/: index.md  log.md
wiki/communication/: plain_language_explanation.md
wiki/concepts/: CHF_correlations.md  RPI_model_implementation.md  RPI_wall_boiling_model.md  correlation_anatomy.md  semi_mechanistic_boiling_model.md  two_phase_fundamentals.md
wiki/entities/: garimella_group.md  mudawar_group.md
wiki/papers/: Drummond2018_manifold_microchannel.md  HallMudawar2000_subcooled_CHF.md  KimMudawar2013_universal_boiling_II.md  KrepperRzehak2011_DEBORA.md  Ozguc2024_topology_optimization.md  QuMudawar2003_microchannel_boiling_I.md  Viyyuri2024_fluent_microchannel_boiling.md
wiki/synthesis/: baseline_decision.md  motivation_for_CFD_approach.md  open_questions.md  schema_evolution.md
wiki/templates/: comparison.md  concept.md  entity.md  paper.md  synthesis.md
