[project]
name = "two-phase-cp"
version = "0.1.0"
description = "Computational framework for two-phase cold plate design optimization"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Avinash Nayal"},
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "CoolProp>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/two_phase_cp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
